<resources>
    <string name="app_name">SIMIPA</string>
    <string name="schedule">Jadwal</string>
    <string name="content_description">Content Description</string>
    <string name="krs">KRS</string>
    <string name="presence">Presensi</string>
    <string name="agenda">Agenda</string>
    <string name="recapitulation">Rekapitulasi</string>
    <string name="guidance">Bimbingan</string>
    <string name="Service">Layanan</string>
    <string name="score">Nilai</string>
    <string name="achievment">Prestasi</string>
    <string name="progress_study">Kemajuan</string>
    <string name="scholarship">Beasiswa</string>
    <string name="calendar_academic">Kalendar</string>
    <string name="sub_app_name">Student Apps</string>
    <string name="collegeschedule">Jadwal Kuliah</string>
    <string name="classschedule">Jadwal Ruangan</string>
    <string name="form_beasiswa">Form Beasiswa</string>
    <string name="history">Riwayat</string>
    <string name="detail_slider1">SIMIPA merupakan aplikasi khusus untuk mahasiswa FMIPA sebagai fasilitas pendukung Mahasiswa FMIPA Universitas Lampung</string>
    <string name="content_slider2">Jadwal kuliah, Absensi, Layanan akademik, Bimbingan, Prestasi saati ini ada di genggaman anda</string>
    <string name="content_slider3">Login menggunakan NPM dan password anda seperti pada website FMIPA, lalu manfaatkan fasilitas pendukung akademik ini</string>
    <string name="welcome">Selamat Datang</string>
    <string name="cara_masuk">Cara Masuk</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Mulai</string>
    <string name="login">Login</string>
    <string name="npm">NPM</string>
    <string name="password">Password</string>
    <string name="test_year_calendar">Tahun Ajaran 2019/2020</string>
    <string name="ex_data_calendar">Pengisian KRS</string>
    <string name="ex_date_calendar">29–07–2019 s.d 20–07–2019</string>
    <string name="strip">-</string>
    <string name="calendar">Kalender Akademik</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="progress">Kemajuan Studi</string>
    <string name="change_language">Ubah Bahasa</string>
    <string name="change">Ubah</string>
    <string name="text_develop">Under Develop Process</string>
    <string name="jadwal_kuliah">Kuliah</string>
    <string name="jadwal_praktikum">Praktikum</string>
    <string name="selasa">Selasa</string>
    <string name="rabu">Rabu</string>
    <string name="mata_kuliah">Mata Kuliah</string>
    <string name="kode">Kode</string>
    <string name="dosen">Dosen</string>
    <string name="ruang">Ruang</string>
    <string name="jam">Jam</string>
    <string name="jadwal_seminar">Seminar</string>
    <string name="tglSeminar">22–10–2019</string>
    <string name="nama_mahasiswa_seminar">Nama Mahasiswa</string>
    <string name="judul_seminar">Judul</string>
    <string name="ruang_seminar">Ruang</string>
    <string name="jenis_seminar">Jenis Seminar</string>
    <string name="join_seminar">Join</string>
    <string name="seminarschedule">Jadwal Seminar</string>
    <string name="setting">Pengaturan</string>
    <string name="practiceschedule">Jadwal praktikum</string>
    <string name="CheckRecapPresence">Check</string>
    <string name="presence_kehadiran">Kehadiran</string>
    <string name="dosen_pembimbing">Dosen Pembimbing</string>
    <string name="seminar">Seminar</string>
    <string name="seminar_kp">Seminar KP</string>
    <string name="seminar_usul">Seminar Usul</string>
    <string name="seminar_hasil">Seminar Hasil</string>
    <string name="field_kosong">Isian ini harus diisi</string>
    <string name="koneksi_lambat">Mohon perika kembali jaringan anda</string>
    <string name="empty_warning">Ops! Semua isian harus diisi</string>
    <string name="show_less">Show less</string>
    <string name="show_all">Show all</string>
    <string name="ruangan">Ruangan</string>
    <string name="nama_mahasiswa">Nama Mahasiswa</string>
    <string name="judul">Judul</string>
    <string name="nip">NIP</string>
    <string name="prodi">Prodi</string>
    <string name="bimbingan_ta">bimbingan ta</string>
    <string name="bimbingan_pa">bimbingan pa</string>
    <string name="tanggal">tanggal</string>
    <string name="name">name</string>
    <string name="rank">rank</string>
    <string name="npm1">npm1</string>
    <string name="non_akademik">Non Akademik</string>
    <string name="akademik">Akademik</string>
    <string name="semester">Semester</string>
    <string name="status">Status</string>
    <string name="_7_30">07.30</string>
    <string name="_9_10">09.10</string>
    <string name="rancang_bangun_aplikasi_simipa">Rancang Bangun Aplikasi SIMIPA</string>
    <string name="kelas_gik">GIK Lt.1C</string>
    <string name="ardiansyah_s_kom">Ardiansyah, S.Kom.</string>
    <string name="absen">ABSEN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="klik_notif">klik notif</string>
    <string name="jadwal_kosong">Tidak ada jadwal</string>
    <string name="jenis">Jenis</string>
    <string name="jam1">jam1</string>
    <string name="jam2">jam2</string>
    <string name="tahun">Tahun</string>
    <string name="nama_beasiswa">Nama Beasiswa</string>
    <string name="title_activity_add_achievment">AddAchievmentActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">simpan</string>
    <string name="category">Kategori</string>
    <string name="nama">Nama</string>
    <string name="level">Tingkat Prestasi</string>
    <string name="type">Jenis Prestasi</string>
    <string name="chemistry">Kimia</string>
    <string name="biology">Biologi</string>
    <string name="math">Matematika</string>
    <string name="physics">Fisika</string>
    <string name="cs">Ilmu Komputer</string>
    <string name="cs1">S1 Ilmu Komputer</string>
    <string name="cs2">D3 Manajemen Informatika</string>
    <string name="upload">Upload</string>
    <string name="achieve">Capaian Prestasi</string>
    <string name="not_finish">Belum Selesai</string>
    <string name="finish">Selesai</string>
    <string name="orang_tua_wali">Orang tua/wali</string>
    <string name="teks_konfirmasi_hapus">Apakah anda yakin untuk menghapus Orang Tua/Wali tersebut dari daftar anda?</string>
    <string name="teks_konfirmasi_approved">Apakah anda yakin untuk mengkonfirmasi Orang Tua/Wali tersebut?</string>
    <string name="teks_konfirmasi_reject">Apakah anda yakin untuk menolak Orang Tua/Wali tersebut?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="tolak">Tolak</string>
    <string name="server_error">Gagal terhubung ke server!</string>
    <string name="terjadi_kesalahan">Terjadi kesalahan!</string>
    <string name="gagal_dihapus">Gagal dihapus. Coba lagi!</string>
    <string name="gagal_ditolak">Gagal ditolak. Coba lagi!</string>
    <string name="gagal_disetujui">Gagal dikonfirmasi. Coba lagi!</string>
    <string name="berhasil_dihapus">Data permintaan dihapus</string>
    <string name="berhasil_ditolak">Data permintaan ditolak</string>
    <string name="berhasil_disetujui">Data permintaan dikonfirmasi</string>
    <string name="gagal_update_token">Gagal memperbaharui token</string>
    <string name="terjadi_kesalahan_update_token">Terjadi kesalahan saat memperbaharui token</string>
    <string name="izin_diberikan">Izin diberikan</string>
    <string name="izin_ditolak">Izin ditolak</string>
    <string name="gagal_mengirim_notifikasi">Gagal mengirim notifikasi!</string>
    <string name="parent_notification_channel_name_1">PARENT_CHANNEL_SIMIPA_REQUEST</string>
    <string name="parent_notification_channel_name_2">PARENT_CHANNEL_SIMIPA_DELETE</string>
    <string name="parent_notification_channel_name_3">PARENT_CHANNEL_SIMIPA_REJECT</string>
    <string name="parent_notification_channel_name_4">PARENT_CHANNEL_SIMIPA_APPROVED</string>
    <string name="parent_notification_channel_id_1">PARENT_CHANNEL_SIMIPA_1</string>
    <string name="parent_notification_channel_id_2">PARENT_CHANNEL_SIMIPA_2</string>
    <string name="parent_notification_channel_id_3">PARENT_CHANNEL_SIMIPA_3</string>
    <string name="parent_notification_channel_id_4">PARENT_CHANNEL_SIMIPA_4</string>
    <string name="parent_notification_group_name_1">PARENT_GROUP_SIMIPA_REQUEST</string>
    <string name="parent_notification_group_name_2">PARENT_GROUP_SIMIPA_DELETE</string>
    <string name="parent_notification_group_name_3">PARENT_GROUP_SIMIPA_REJECT</string>
    <string name="parent_notification_group_name_4">PARENT_GROUP_SIMIPA_APPROVED</string>
    <string name="parent_notification_group_id_1">PARENT_GROUP_SIMIPA_1</string>
    <string name="parent_notification_group_id_2">PARENT_GROUP_SIMIPA_2</string>
    <string name="parent_notification_group_id_3">PARENT_GROUP_SIMIPA_3</string>
    <string name="parent_notification_group_id_4">PARENT_GROUP_SIMIPA_4</string>
    <string name="parent_notification_title_id_1">TBA</string>
    <string name="parent_notification_title_id_2">Akses dihapus mahasiswa</string>
    <string name="parent_notification_title_id_3">Permintaan ditolak</string>
    <string name="parent_notification_title_id_4">Permintaan dikonfirmasi</string>
    <string name="parent_notification_message_id_1">TBA</string>
    <string name="parent_notification_message_id_2">menghapus anda dalam daftar perizinan akses data perkuliahannya.</string>
    <string name="parent_notification_message_id_3">menolak permintaan anda untuk mengakses data perkuliahannya.</string>
    <string name="parent_notification_message_id_4">mengkonfirmasi permintaan anda untuk mengakses data perkuliahannya.</string>
    <string name="student_notification_channel_name_1">STUDENT_CHANNEL_SIMIPA_REQUEST</string>
    <string name="student_notification_channel_name_2">STUDENT_CHANNEL_SIMIPA_DELETE</string>
    <string name="student_notification_channel_id_1">STUDENT_CHANNEL_SIMIPA_1</string>
    <string name="student_notification_channel_id_2">STUDENT_CHANNEL_SIMIPA_2</string>
    <string name="student_notification_group_name_1">STUDENT_GROUP_SIMIPA_REQUEST</string>
    <string name="student_notification_group_name_2">STUDENT_GROUP_SIMIPA_DELETE</string>
    <string name="student_notification_group_id_1">STUDENT_GROUP_SIMIPA_1</string>
    <string name="student_notification_group_id_2">STUDENT_GROUP_SIMIPA_2</string>
    <string name="student_notification_title_id_1">Permintaan akses data</string>
    <string name="student_notification_title_id_2">Perizinan akses data dihapus</string>
    <string name="student_notification_message_id_1">meminta untuk mengakses data perkuliahan anda.</string>
    <string name="student_notification_message_id_2">menghapus izinnya untuk mengakses data perkuliahan anda.</string>
    <string name="data_kosong">Data kosong</string>
</resources>