<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginTop="9dp"
    android:elevation="0.5dp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_margin="2dp"
        android:layout_weight="2"
        android:id="@+id/cd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <LinearLayout
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/col_matkul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mata_kuliah"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/col_matkode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/col_dosen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dosen"
            android:textStyle="bold"
            android:textSize="14sp" />
         <TextView
             android:id="@+id/col_nip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nip"
             android:textSize="12sp" />
         <TextView
             android:id="@+id/col_prodi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/prodi"
             android:textSize="14sp"
             android:textStyle="bold"/>
        </LinearLayout>
            <LinearLayout
                android:padding="6dp"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <TextView
            android:id="@+id/col_ruang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruang"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/col_jammulai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jam"
            android:textSize="12sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="-" />
        <TextView
            android:id="@+id/col_jamselesai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jam"
            android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.cardview.widget.CardView>