<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginTop="9dp"
    android:orientation="vertical"
    android:elevation="0.5dp"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv2"
        android:layout_width="386dp"
        android:layout_height="70dp"
        android:layout_marginRight="@dimen/activity_margin_horizontal"
        app:cardCornerRadius="6dp">


        <TextView
            android:id="@+id/recapPresensi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="9dp"
            android:text="@string/mata_kuliah"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recapMatkode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="28dp"
            android:text="@string/kode"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/recapDosen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="42dp"
            android:text="@string/dosen"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_checkPresence"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_blue"
            android:text="@string/CheckRecapPresence"
            android:textColor="#FFFF"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>