<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorRedState">

    <ImageView
        android:id="@+id/img_slider2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_beasiswa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:contentDescription="@string/content_description"/>

    <TextView
        android:id="@+id/tv_slider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cara_masuk"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_slider2" />

    <TextView
        android:id="@+id/tv2_slider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_item"
        android:paddingStart="@dimen/margin_item"
        android:text="@string/content_slider3"
        android:textAlignment="center"
        android:textColor="@color/colorIcons"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_slider2"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
